commit content pages

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <h5>Pendampingan Usulan Jabatan Akademik Dosen ke Perguruan Tinggi Swasta Wilayah Kota dan Kabupaten Bekasi, Karawang, dan Cikarang (26 Juli 2022)</h5>
             </div>
             <div class="card__footer">
-                <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+                <a class="btn-solid-lg page-scroll" href="pages/content.html">Baca Selengkapnya</a>
             </div>
             </div>
             <div class="news-card">
@@ -174,7 +174,7 @@
                 <h5>Penyerahan SK Jabatan Akademik Dosen Kemdikbudristek</h5>
                 </div>
                 <div class="card__footer">
-                <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+                <a class="btn-solid-lg page-scroll" href="pages/content.html">Baca Selengkapnya</a>
                 </div>
             </div>
             <div class="news-card">
@@ -186,7 +186,7 @@
                 <h5>Pemberitahuan untuk Pemutakhiran Data pada SINTA</h5>
                 </div>
                 <div class="card__footer">
-                <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+                <a class="btn-solid-lg page-scroll" href="pages/content.html">Baca Selengkapnya</a>
                 </div>
             </div>
         </div>
