--- a/pages/berita.html
+++ b/pages/berita.html
@@ -58,7 +58,7 @@
             <h5>Pendampingan Usulan Jabatan Akademik Dosen ke Perguruan Tinggi Swasta Wilayah Kota dan Kabupaten Bekasi, Karawang, dan Cikarang (26 Juli 2022)</h5>
         </div>
         <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
         </div>
         </div>
         <div class="news-card">
@@ -70,7 +70,7 @@
             <h5>Penyerahan SK Jabatan Akademik Dosen Kemdikbudristek</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
             </div>
         </div>
         <div class="news-card">
@@ -82,7 +82,7 @@
             <h5>PemInfohuan untuk Pemutakhiran Data pada SINTA</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
             </div>
         </div>
         <!-- end of Row1 -->
@@ -98,7 +98,7 @@
             <h5>UNDANGAN TRACERSTUDY PTS WILAYAH BANTEN DAN JAWA BARAT 2022</h5>
         </div>
         <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
         </div>
         </div>
         <div class="news-card">
@@ -110,7 +110,7 @@
             <h5>PENDAFTARAN MAGANG BERSERTIFIKAT</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
             </div>
         </div>
         <div class="news-card">
@@ -122,7 +122,7 @@
             <h5>UNDANGAN GRAND LAUNCHING WIRA USAHA MERDEKA TAHUN 2022</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content.html">Baca Selengkapnya</a>
             </div>
         </div>
         <!-- end of Row1 -->
